fix alignment of topic title

--- a/modules/composer.less
+++ b/modules/composer.less
@@ -34,7 +34,7 @@
 		.title {
 			display: block;
 			font-size: 22px;
-			padding-left: 0;
+			padding-left: 3px;
 			border: 0;
 			.box-shadow(none);
 			height: 47px;
